! VMR-7 renderless: subtitles were not displayed except in fullscreen
! Ensure dynamic menus dependent on the currently playing media are updated when the media changes while a menu is opened
! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
! Ticket #3763, VMR-9 renderless and EVR-CP: The displayed subtitle was not updated when seeking while playback was paused
! Ticket #4011, Fix image saving for streams with characters not supported in path names
! Ticket #4013, Subtitle renderer: Fix a crash on malformed animated transforms (\t tags with no parameters)
! Ticket #4020, Update dialog: Fix incorrect version info when using Belarusian, Slovenian or Russian translations


1.7.3 - 02 February 2014
========================
+ New Galician and Vietnamese translations
+ Ticket #3873, Display tooltip with H/W decoder name on hover over status message
* Updated Armenian, Basque, British English, Simplified Chinese, French, German, Japanese, Malay,
  Polish, Portuguese (Brazil), Romanian, Slovak, Spanish, Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar
! Ticket #3881, DXVA status was invalid with certain decoders
! Ticket #3981, Subtitle renderer: the blur filter was sometimes wrong on some part of the subpicture
! Ticket #3988, DVD favorites: the position in the DVD was not restored. Additionally if "Remember DVD position"
  is enabled and a DVD favorite has a position, the position from the favorite will be used instead of the
  remembered position. Also fix loading of DVD favorites created with no position.
! Ticket #3998, The "Debug Shaders" dialog icon was missing when a translation was used


1.7.2 - 26 January 2014
=======================