@@ -26,6 +26,8 @@ next version - not released yet
 ! Ensure dynamic menus dependent on the currently playing media are updated when the media changes while a menu is opened
 ! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
 ! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
+! Ticket #3437, Audio Switcher: Support fallback to another media type. For example, this enables audio decoders
+  to fallback to normal decoding if bitstreaming isn't supported
 ! Ticket #3763, VMR-9 renderless and EVR-CP: The displayed subtitle was not updated when seeking while playback was paused
 ! Ticket #4011, Fix image saving for streams with characters not supported in path names
 ! Ticket #4013, Subtitle renderer: Fix a crash on malformed animated transforms (\t tags with no parameters)
